Fix Java Map.of() and List.of() compatibility issues for CI environment
Co-authored-by: shinyay <3072734+shinyay@users.noreply.github.com>